--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<section>
 
 				<bivrost-player loop="true">
-					<bivrost-media url="https://docs.bivrost.pro/webplayer-docs/EHF2016-FWVGA_480p-480x854.mp4"></bivrost-media>
+					<bivrost-media url="video/4.mp4"></bivrost-media>
 					<bivrost-media url="https://avatars.githubusercontent.com/u/1727207?v=4"></bivrost-media>
 				</bivrost-player>
 
