--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 			<section>
 
-				<bivrost-player loop="true">
+				<bivrost-player loop="true" 
+		autoplay="true" >
 					<bivrost-media url="video/4.mp4"></bivrost-media>
 					<bivrost-media url="https://avatars.githubusercontent.com/u/1727207?v=4"></bivrost-media>
 				</bivrost-player>
